<resources>
    <string name="app_name">NatRight</string>
    <string name="intro_quote">Did you know you have rights? \nThe Constitution says you do, and so do we.</string>
    <string name="intro_Description">
        Everyone deserves to be treated as each other\'s equal, to be seen as a person
        being worthy of respect and utmost fairness. Our rights is what defines our humanity
        and reinforce our innate dignity. It can also ensure us a very humane state of living
        that promotes freedom, choice, and equity among others. Nobody can ever take those away
        from us for it is indelible to our existence. We may not be able to see or touch them
        but rights grants us the protection against all forms of injustices and abuses. Sadly,
        there are those who go out of their way to trample upon the dignity of others without
        remorse. That is why there are still victims being accosted for to this day. Not helping
        matters is the fact that others are unaware of their rights and are being exploited for it.
        Do we just ignore all of these? Do we just let it be? We say no to this form of abuse
        on another. Rights are fundamental to our being, our identity as a human being. Standing by
        and doing nothing is not an option, we should uphold it. The thing we can do to uphold our
        rights is to claim it. So, take charge and learn what and why you need to learn your rights.</string>
    <string name="header">ARTICLE III</string>
    <string name="subtitle">Bill of Rights</string>
    <string name="orgFunctions">Under Section 18, Article XIII of the 1987 Constitution, the Commission on Human Rights shall have the following powers and functions:
        \n\n(1) Investigate, on its own or on complaint by any party, all forms of human rights violations involving civil and political rights;
        \n\n(2) Adopt its operational guidelines and rules of procedure, and cite for contempt for violations thereof in accordance with the Rules of Court;
        \n\n(3) Provide appropriate legal measures for the protection of human rights of all persons within the Philippines, as well as Filipinos residing abroad,
        and provide for preventive measures and legal aid services to the under-privileged whose human rights have been violated or need protection;
        \n\n(4) Exercise visitorial powers over jails, prisons, or detention facilities;
        \n\n(5) Establish a continuing program of research, education, and information to enhance respect for the primacy of human rights;
        \n\n(6) Recommend to Congress effective measures to promote human rights and to provide for compensation to victims of violations of human rights, or their families;
        \n\n(7) Monitor the Philippine Government\'s compliance with international treaty obligation on human rights;
        \n\n(8) Grant immunity from prosecution to any person whose testimony or whose possession of documents or other evidence is necessary or convenient to determine the truth in any investigation conducted by it or under its authority;
        \n\n(9) Request the Assistance of any department, bureau, office, or agency in the performance of its functions;
        \n\n(10) Appoint its officers and employees in accordance with law; and
        \n\n(11) Perform such other duties and functions as may be provided by law.
    </string>
    <string name="orgVision">A just and humane Philippine society of persons equal in opportunity, living a life of dignity, and forever vigilant against abuses and oppression.</string>
    <string name="orgMission">As conscience of government and the people, we seek truth in human rights issues and prevent incidence of human rights violations. As beacon of truth, we make people aware of their rights, and guide government
        and society towards actions that respect the rights of all, particularly those who cannot defend themselves — the disadvantaged, marginalized, and vulnerable.</string>
    <string name="infoHeader1">Why are rights important?</string>
    <string name="infoHeader1_Content">A right in itself does not discriminate from race, gender, language, religion, beliefs, nationality, and personal circumstances. Your rights are nonnegotiable.
    You are born with it and you use it to take part in the growth of yourself and society. Without it, a human being would be subject to devastating amounts of injustices and abuses. That is not the
    way to treat one another. Rights allow us to live with our heads held up high and with dignity. Rights should never be trampled on for it is fundamental to our existence as a human being. It entitles
    us to all of the goodness and fairness this world has to offer. To put it simply, human rights protects and preserves our humanity.</string>
    <string name="infoHeader2">Why the need for NatRight?</string>
    <string name="infoHeader2_Content">Frankly, there is no need for this application at all. Like it was stated above, there is no need to remind people that they have rights. Every person simply possesses
    it from the get-go. Those with enough technological competence can locate the proper directory of information regarding rights with ease today. But, this is not for those who are able to find it for themselves,
    this is for those who are not capable or unable to learn about their rights. This statement also extends to those who are unaware of their rights and want to inform themselves. We would have preferred for this
    application to be just a fun read for those interested. But, injustices are still occurring, people are still being abused, and humans are still being discriminated. So, this application is intended to be a guide
    and a short read for those who desire to reclaim their rights and remind us that we are all the same.</string>
    <string name="orgHeader">The Primary Institution for Human Rights</string>
    <string name="orgName">Commission on Human Rights</string>
    <string name="orgDetails">The Commission on Human Rights (CHR) is an independent National Human Rights Institution (NHRI) created under the 1987 Philippine Constitution,
        established on 05 May 1987 by virtue of Executive Order No. 163.
        \n\nThe Commission is mandated to conduct investigations on human rights violations against marginalized and vulnerable sectors of the society, involving civil and political rights.
        \n\nCHR is an “A” accredited NHRI, fully complying with the Paris Principles adopted by the United Nations General Assembly in 1995. As an NHRI, the Commission upholds six
        fundamental characteristics — independence, pluralism, broad mandate, transparency, accessibility, and operational efficiency.
        \n\nThe Commission commits to deliver prompt, responsive, accessible, and excellent public ser vice for the protection and promotion of human rights in accordance with universal
        human rights principles and standards.</string>
    <string-array name="sections_name_array">
        <item>Section 1</item>
        <item>Section 2</item>
        <item>Section 3</item>
        <item>Section 4</item>
        <item>Section 5</item>
        <item>Section 6</item>
        <item>Section 7</item>
        <item>Section 8</item>
        <item>Section 9</item>
        <item>Section 10</item>
        <item>Section 11</item>
        <item>Section 12</item>
        <item>Section 13</item>
        <item>Section 14</item>
        <item>Section 15</item>
        <item>Section 16</item>
        <item>Section 17</item>
        <item>Section 18</item>
        <item>Section 19</item>
        <item>Section 20</item>
        <item>Section 21</item>
        <item>Section 22</item>
    </string-array>
    <string name="law_text">Laws Attributed</string>
    <string name="sec1">Section 1</string>
    <string name="sec1_detail">No person shall be deprived of life, liberty, or property without due process of law, nor shall any person be denied the equal
        protection of the laws.</string>
    <string name="sec2">Section 2</string>
    <string name="sec2_detail">The right of the people to be secure in their persons, houses, papers, and effects against unreasonable searches and seizures
        of whatever nature and for any purpose shall be inviolable, and no search warrant or warrant of arrest shall issue except upon probable cause to be
        determined personally by the judge after examination under oath or affirmation of the complainant and the witnesses he may produce, and particularly
        describing the place to be searched and the persons or things to be seized. </string>
    <string name="sec3">Section 3</string>
    <string name="sec3_detail">
        (1) The privacy of communication and correspondence shall be inviolable except upon lawful order of the court, or when public
        safety or order requires otherwise, as prescribed by law.
        \n\n2) Any evidence obtained in violation of this or the preceding section shall be inadmissible for any purpose in any
        proceeding.</string>
    <string name="sec4">Section 4</string>
    <string name="sec4_detail">No law shall be passed abridging the freedom of speech, of expression, or of the press, or the right of the people peaceably to
        assemble and petition the government for redress of grievances.</string>
    <string name="sec5">Section 5</string>
    <string name="sec5_detail">No law shall be made respecting an establishment of religion, or prohibiting the free exercise thereof. The free exercise and
        enjoyment of religious profession and worship, without discrimination or preference, shall forever be allowed. No religious test shall be required for
        the exercise of civil or political rights.</string>
    <string name="sec6">Section 6</string>
    <string name="sec6_detail">The liberty of abode and of changing the same within the limits prescribed by law shall not be impaired except upon lawful order
        of the court. Neither shall the right to travel be impaired except in the interest of national security, public safety, or public health, as may be
        provided by law.</string>
    <string name="sec7">Section 7</string>
    <string name="sec7_detail">The right of the people to information on matters of public concern shall be recognized. Access to official records, and to documents
        and papers pertaining to official acts, transactions, or decisions, as well as to government research data used as basis for policy development, shall be
        afforded the citizen, subject to such limitations as may be provided by law.</string>
    <string name="sec8">Section 8</string>
    <string name="sec8_detail">The right of the people, including those employed in the public and private sectors, to form unions, associations, or societies for
        purposes not contrary to law shall not be abridged.</string>
    <string name="sec9">Section 9</string>
    <string name="sec9_detail">Private property shall not be taken for public use without just compensation</string>
    <string name="sec10">Section 10</string>
    <string name="sec10_detail">No law impairing the obligation of contracts shall be passed.</string>
    <string name="sec11">Section 11</string>
    <string name="law_10172_sec2_1">Chapter VII</string>
    <string name="law_10172_sec2_2">Security of Sensitive Personal Information in Government</string>
    <string name="law_10172_sec2_3">Section 23</string>
    <string name="law_10172_sec2_manifesto">
        (a) On-site and Online Access – Except as may be allowed through guidelines to be issued by the Commission, no employee of the government shall
        have access to sensitive personal information on government property or through online facilities unless the employee has received a security clearance from the head of the source
        agency.</string>
</resources>