<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".section_1">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="#01A0E1"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:transitionName="sharedTransition_card">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView14"
                    style="@style/TextAppearance.Subtitle.Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:text="@string/orgHeader"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="italic|bold"
                    android:transitionName="sharedTransition_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:transitionName="sharedTransition_image"
                        app:srcCompat="@drawable/govsec_chr_resize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/view4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/TextAppearance.Section.Header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/orgName"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:transitionName="sharedTransition_text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/TextAppearance.Section.Detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/orgDetails"
                        android:textColor="#FFFFFF" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/textView7"
                        style="@style/TextAppearance.MdcTypographyStyles.Overline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="Functions of the CHR"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/textView12"
                        style="@style/TextAppearance.Section.Detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textStyle="italic"
                        android:text="@string/orgFunctions"
                        android:textColor="#FFFFFF" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/TextAppearance.MdcTypographyStyles.Overline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="Vision"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF" />


                    <TextView
                        android:id="@+id/textView15"
                        style="@style/TextAppearance.Section.Detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/orgVision"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/textView9"
                        style="@style/TextAppearance.MdcTypographyStyles.Overline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="Mission"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF" />


                    <TextView
                        android:id="@+id/textView17"
                        style="@style/TextAppearance.Section.Detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/orgMission"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textStyle="italic" />

                    <View
                        android:id="@+id/view124"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/textView19"
                        style="@style/TextAppearance.Section.Detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="Contents taken from: https://chr.gov.ph/about-us/"
                        android:textAlignment="viewEnd"
                        android:textColor="#FFFFFF"
                        android:textSize="8sp"
                        android:textStyle="italic" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        app:itemIconTint="@color/nav_color"
        app:itemTextColor="@color/nav_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>